crates/alder-solve/tests/snapshots/inference__general_pattern_refutable_binding.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn unwrap(value: Option[Number]) Number {\n    let Some(number) = value\n    number\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 9,
            },
            end: Position {
                line: 2,
                column: 21,
            },
        },
        kind: RefutableBindingPattern {
            missing: [
                "None",
            ],
        },
        expectation: None,
    },
]
