crates/alder-solve/tests/snapshots/inference__general_pattern_restricted_result_payload.snap
---
source: crates/alder-solve/tests/inference.rs
description: "error Failure { :missing }\nfn render(value: Result[Number, Failure]) Number {\n    match value { Ok(0) => 0, Err(:missing) => 1 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 3,
                column: 5,
            },
            end: Position {
                line: 3,
                column: 51,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "Ok(_)",
            ],
        },
        expectation: None,
    },
]
