crates/alder-solve/tests/snapshots/inference__generalization_subtracts_mutable_environment_variables.snap
---
source: crates/alder-solve/tests/inference.rs
description: "let mut identity = (value) -> { value }\nfn forward(value) { identity(value) }\nfn number() { forward(1) }\nfn text() { forward(\"text\") }\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 4,
                column: 13,
            },
            end: Position {
                line: 4,
                column: 28,
            },
        },
        kind: Mismatch {
            actual: "String",
            expected: "Number",
        },
    },
]
