crates/alder-solve/tests/snapshots/inference__guarded_error_arm_does_not_complete_coverage.snap
---
source: crates/alder-solve/tests/inference.rs
description: "error Failure {\n    :invalid(String)\n}\n\nfn render(value: Result[Number, Failure]) String {\n    match value {\n        Ok(number) => \"ok\",\n        Err(:invalid(message)) if message == \"special\" => message,\n    }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 6,
                column: 5,
            },
            end: Position {
                line: 9,
                column: 6,
            },
        },
        kind: NonExhaustiveErrorMatch {
            missing: [
                ":invalid",
            ],
            open: false,
        },
        expectation: None,
    },
]
