crates/alder-solve/tests/snapshots/inference__higher_kinded_unification_expands_transparent_aliases.snap
---
source: crates/alder-solve/tests/inference.rs
description: "type Wrapped[a, e] = Result[a, e]\n\nfn adapt(value: f[a]) f[a] { value }\nfn specialize(value: Wrapped[Number, [:failed]]) { adapt(value) }\n"
---
adapt: forall a, b. fn(a[b]) a[b]
specialize: fn(Result[Number, [:failed]]) Result[Number, [:failed]]
