crates/alder-solve/tests/snapshots/inference__higher_kinded_unification_preserves_two_hole_order.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn adapt(value: f[a, b], first: a, second: b) f[a, b] { value }\nenum Pair[a, b] { Pair(a, b) }\nfn specialize(value: Pair[Number, String]) {\n    adapt(value, 1, \"second\")\n}\n"
---
adapt: forall a, b, c. fn(a[b, c], b, c) a[b, c]
specialize: fn(Pair[Number, String]) Pair[Number, String]
