crates/alder-solve/tests/snapshots/inference__higher_kinded_unification_recovers_partial_result.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn adapt(value: f[a]) f[a] { value }\nfn specialize(value: Result[Number, [:failed]]) { adapt(value) }\n"
---
adapt: forall a, b. fn(a[b]) a[b]
specialize: fn(Result[Number, [:failed]]) Result[Number, [:failed]]
