crates/alder-solve/tests/snapshots/inference__higher_kinded_unification_rejects_an_occurs_cycle.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn impossible(value: f[a]) a { value }\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 32,
            },
            end: Position {
                line: 1,
                column: 37,
            },
        },
        kind: InfiniteType {
            equation: Some(
                (
                    Variable(
                        0,
                    ),
                    Application(
                        Variable(
                            1,
                        ),
                        [
                            Variable(
                                0,
                            ),
                        ],
                    ),
                ),
            ),
        },
        expectation: Some(
            Expectation {
                kind: Return,
                origin: Some(
                    Region {
                        start: Position {
                            line: 1,
                            column: 28,
                        },
                        end: Position {
                            line: 1,
                            column: 29,
                        },
                    },
                ),
            },
        ),
    },
]
