crates/alder-solve/tests/snapshots/inference__higher_kinded_unification_rejects_inconsistent_partial_sections.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn combine(left: f[a], right: f[b]) f[a] { left }\nfn invalid(\n    left: Result[Number, [:left]],\n    right: Result[Bool, [:right]],\n) {\n    combine(left, right)\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 6,
                column: 19,
            },
            end: Position {
                line: 6,
                column: 24,
            },
        },
        kind: Mismatch {
            actual: "[:right]",
            expected: "[:left]",
        },
    },
]
